--- a/CSS/style.css
+++ b/CSS/style.css
@@ -79,7 +79,7 @@ h2::after{
 
 }
 
-.imgArkveld{
+img{
     width: 100%;
     
 }
@@ -93,6 +93,7 @@ h2::after{
     top: 50%;
     background: rgb(0,0,0);
     background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(253,253,253,0.45626172832414214) 50%, rgba(0,0,0,0) 100%);
+    z-index: 3000;
 }
 
 h3{
@@ -105,6 +106,96 @@ h3{
 p{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.h1NouvellesMenace{
+    margin-top: 30vh;
+}
+
+.sectionNouvellesMenaces{
+    position: relative;
+    height: 140vh;
+}
+
+.balara{
+    position: absolute;
+    bottom: -200px;
+    width: 66%;
+    left: -300px;
+}
+.articleMenace{
+    width: 40%;
+    align-items: center;
+    color: white;
+    position: absolute;
+    right: 100px;
+    top: 50%;
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(253,253,253,0.45626172832414214) 50%, rgba(0,0,0,0) 100%);
+    z-index: 3000;
+   
+}
+
+.h3Wyernes{
+    margin-bottom: 50px;
+}
+
+.endGame{
+    height: 140vh;
+    position: relative;
+}
+
+.hirabami{
+    width: 80%;
+    position: absolute;
+    top: 200px;
+    right: -200px;
+    z-index: 2000;
+}
+
+.caVol{
+    width: 40%;
+    align-items: center;
+    color: white;
+    position: absolute;
+    left: 100px;
+    top: 60%;
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(253,253,253,0.45626172832414214) 50%, rgba(0,0,0,0) 100%);
+    z-index: 1000;
+}
+
+.biomes{
+    position: relative;
+    height: 140vh;
+}
+
+.imgRaydau{
+    width: 100%;
+    position: absolute;
+    bottom: -6%;
+    right:  300px;
+
+}
+
+.articleRaydau{
+    width: 50%;
+    align-items: center;
+    color: white;
+    position: absolute;
+    left: 5%;
+    bottom: 0;
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(253,253,253,0.45626172832414214) 50%, rgba(0,0,0,0) 100%);
+    z-index: 1000;
+
+}
+
+
+
+
+
+
+
 
 
 
